--- a/Demo1.html
+++ b/Demo1.html
@@ -14,6 +14,7 @@ body ::selection{
 		<title>Page-preloading | Demo 1</title>
 		<meta name="description" content="Page Preloading Effect: Re-creating the effect seen on fontface.ninja" />
 		<meta http-equiv="Cache-Control" content="no-siteapp" />
+		<!--[if lte IE 9]><script src="select/selectivizr.js"></script><![endif]-->
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" sizes="any" />
 		<link rel="stylesheet" type="text/css" href="demo_css/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="demo_css/demo.css" />
