--- a/crazy.html
+++ b/crazy.html
@@ -12,6 +12,7 @@ body ::selection{
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 		<meta http-equiv="Cache-Control" content="no-siteapp" />
+		<!--[if lte IE 9]><script src="select/selectivizr.js"></script><![endif]-->
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" sizes="any" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Crazy Tentacles</title>
