--- a/music/17-dec03-dec09.html
+++ b/music/17-dec03-dec09.html
@@ -6,6 +6,7 @@
 		<meta http-equiv="Cache-Control" content="no-siteapp" />
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" sizes="any" />
 		<link rel="stylesheet" href="../common/init.css" />
+		<!--[if lte IE 9]><script src="../select/selectivizr.js"></script><![endif]-->
 		<title>17Dec.03-Dec.09</title>
 	</head>
 	<body>
