--- a/Log.html
+++ b/Log.html
@@ -4,6 +4,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 		<meta http-equiv="Cache-Control" content="no-siteapp" />
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" sizes="any" /> 
+		<!--[if lte IE 9]><script src="select/selectivizr.js"></script><![endif]-->
 		<title>
 			Website Log
 		</title>
