--- a/ball.html
+++ b/ball.html
@@ -6,6 +6,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 		<meta http-equiv="Content-Type" content="text/html; charset = UTF-8" />
 		<meta http-equiv="Cache-Control" content="no-siteapp" />
+		<!--[if lte IE 9]><script src="select/selectivizr.js"></script><![endif]-->
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" sizes="any" />
 		<title>HTML5 Physics Simulation of Balls</title>
 		<style>
