--- a/loading.html
+++ b/loading.html
@@ -5,6 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 		<meta http-equiv="Cache-Control" content="no-siteapp" />
 		<meta name="robots" content="noindex" />
+		<!--[if lte IE 9]><script src="select/selectivizr.js"></script><![endif]-->
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" sizes="any" />
 		<style>
 			body {
