--- a/shine.html
+++ b/shine.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8" />
 		<meta http-equiv="Cache-Control" content="no-siteapp" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+		<!--[if lte IE 9]><script src="select/selectivizr.js"></script><![endif]-->
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" sizes="any" />
 		<link href="shine_assets/demo.css" rel="stylesheet" type="text/css" />
 		<title>
