--- a/textillate.html
+++ b/textillate.html
@@ -11,6 +11,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="Cache-Control" content="no-siteapp" />
+		<!--[if lte IE 9]><script src="select/selectivizr.js"></script><![endif]-->
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" sizes="any" /> 
 		<link href="text_assets/animate.css" rel="stylesheet" />
 		<link href="text_assets/style.css" rel="stylesheet" />
