--- a/weeklymusic.html
+++ b/weeklymusic.html
@@ -4,6 +4,7 @@
 		<meta http-equiv="refresh" content="0;url=music/17-dec03-dec09.html" />
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" sizes="any" /> 
 		<link rel="stylesheet" href="common/init.css" />
+		<!--[if lte IE 9]><script src="select/selectivizr.js"></script><![endif]-->
 	</head>
 	<body>
 		<p>
