--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<i>
 				<b>
 					<font style="font-size:45px;color:white;">
-						December's here!
+						Christmas is coming!
 					</font>
 				</b>
 			</i>
