--- a/Log.html
+++ b/Log.html
@@ -370,6 +370,14 @@
 			<br />
 			<br />
 		</p>
+		<p>
+			12/09
+			<br />
+			weekly music updated
+			<br />
+			<br />
+			<br />
+		</p>
 
 
 		<br />
