--- a/Log.html
+++ b/Log.html
@@ -43,7 +43,7 @@
 
 		<br />
 		<p>
-			Last Updated On 02/12/2017 (DD/MM/YYYY):<br />"here-nothing"
+			Last Updated On 11/12/2017 (DD/MM/YYYY):<br />"here-nothing"
 		</p>
 		<br />
 		<br />
@@ -374,6 +374,14 @@
 			12/09
 			<br />
 			weekly music updated
+			<br />
+			<br />
+			<br />
+		</p>
+		<p>
+			12/11
+			<br />
+			css simplified
 			<br />
 			<br />
 			<br />
