--- a/HTML_color.html
+++ b/HTML_color.html
@@ -682,11 +682,9 @@
           <td>#F3F3FA</td>
           <td bgColor=#ebd3e8></td>
           <td>#EBD3E8</td></tr></tbody></table>
-		</div></td></tr></tbody></table>
-		<p>
-			<font style="font-size:20px;color:black;">
-				Copyright (C) yaozeye@foxmail.com
-			</font>
+		</div>
+		<p id="copyright-black">
+				Copyright &copy; yaozeye@foxmail.com
 		</p>	
 </body>
 </html>
