--- a/Log.html
+++ b/Log.html
@@ -16,10 +16,7 @@
 			body {
 				color: #FFFFFF;
 				background: #000000;
-					}
-			img {
-				border: none;
-				text-align: center;
+				font-family: Georgia, Arial, MS Pmincho, MS Mincho;
 					}
 		</style>
 
@@ -43,7 +40,7 @@
 
 		<br />
 		<p>
-			Last Updated On 11/12/2017 (DD/MM/YYYY):<br />"here-nothing"
+			Last Updated On 12/12/2017 (DD/MM/YYYY):<br />"essentials"
 		</p>
 		<br />
 		<br />
@@ -386,6 +383,22 @@
 			<br />
 			<br />
 		</p>
+		<p>
+			12/12
+			<br />
+			css improved
+			<br />
+			site-wide compatibility improved ( for IE browser version below Internet Explorer 10)
+			<br />
+			Log code simplified
+			<br />
+			font revised
+			<br />
+			background color changed from #EE82EE to #4B9EFF
+			<br />
+			<br />
+			<br />
+		</p>
 
 
 		<br />
@@ -400,7 +413,7 @@
 		<br />
 		<br />
 		<p>
-			Copyright (C) yaozeye@foxmail.com
+			Copyright &copy; yaozeye@foxmail.com
 		</p>	
 	</body>
 </html>
