--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 			</font>
 		</a>
 		<p id="copyright-white">
-				Copyright (C) yaozeye@foxmail.com
+				Copyright &copy; yaozeye@foxmail.com
 		</p>
 	</body>
 </html>
