--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		</h2>
 		<br />
 		<a href="weeklymusic.html" style="text-decoration:none;">
-			<button type="button">	
+			<button type="button" value="WeeklyMusic Dec 10 - Dec 16">	
 				<h3 id="title-caps-red">
 						Weekly Music!<br />Dec.10-Dec.16
 				</h3>
