--- a/weeklymusic.html
+++ b/weeklymusic.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta http-equiv="refresh" content="0;url=music/17-dec10-dec16.html" />
+		<meta http-equiv="refresh" content="0;url=music/17-dec17-dec23.html" />
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" sizes="any" /> 
+		<link rel="apple-touch-icon" href="favicon.ico" sizes="any" />
 		<link rel="stylesheet" href="common/init.css" />
 		<!--[if lte IE 9]><script src="select/selectivizr.js"></script><![endif]-->
 	</head>
