--- a/Log.html
+++ b/Log.html
@@ -4,6 +4,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 		<meta http-equiv="Cache-Control" content="no-siteapp" />
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" sizes="any" /> 
+		<link rel="apple-touch-icon" href="favicon.ico" sizes="any" />
 		<!--[if lte IE 9]><script src="select/selectivizr.js"></script><![endif]-->
 		<title>
 			Website Log
@@ -40,7 +41,7 @@
 
 		<br />
 		<p>
-			Last Updated On 12/12/2017 (DD/MM/YYYY):<br />"essentials"
+			Last Updated On 16/12/2017 (DD/MM/YYYY):<br />"essentials"
 		</p>
 		<br />
 		<br />
@@ -395,6 +396,14 @@
 			font revised
 			<br />
 			background color changed from #EE82EE to #4B9EFF
+			<br />
+			<br />
+			<br />
+		</p>
+		<p>
+			12/16
+			<br />
+			weekly music updated
 			<br />
 			<br />
 			<br />
