--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 		</h2>
 		<br />
 		<a href="weeklymusic.html" style="text-decoration:none;">
-			<button type="button" value="WeeklyMusic Dec 10 - Dec 16">	
+			<button type="button" value="WeeklyMusic Dec 17 - Dec 23">	
 				<h3 id="title-caps-red">
-						Weekly Music!<br />Dec.10-Dec.16
+						Weekly Music!<br />Dec.17-Dec.23
 				</h3>
 			</button>
 		</a>	
@@ -107,7 +107,7 @@
 		</a>
 		<br />
 		<a href="snake.html">
-			<font style="font-size:1.5em;color:peach;">
+			<font style="font-size:1.5em;color:#FFB6C1;">
 				snake(HTML5)
 			</font>
 		</a>
