--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<a href="weeklymusic.html" style="text-decoration:none;">
 			<button type="button" value="WeeklyMusic Dec 17 - Dec 23">	
 				<h3 id="title-caps-red">
-						Weekly Music!<br />Dec.17-Dec.23
+						Weekly Music!<br />Dec 17-Dec 23
 				</h3>
 			</button>
 		</a>	
