--- a/index.html
+++ b/index.html
@@ -164,6 +164,14 @@
 				Log
 			</font>
 		</a>
+		<p>
+			<a href="https://jigsaw.w3.org/css-validator/check/referer">
+				<img style="border:0;width:88px;height:31px"
+					src="https://jigsaw.w3.org/css-validator/images/vcss-blue"
+					alt="Valid CSS!" />
+			</a>
+		</p>
+        <br />
 		<p id="copyright-white">
 				Copyright &copy; yaozeye@foxmail.com
 		</p>
