--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
 		</a>
 		<br />
 		<br />
+		<center><div></div></center>
 		<p>
 			<a href="https://jigsaw.w3.org/css-validator/check/referer">
 				<img style="border:0;width:88px;height:31px"
