--- a/Log.html
+++ b/Log.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 	<head>
-		<meta charset="utf-8" />
+		<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-		<meta http-equiv="Cache-Control" content="no-siteapp" />
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" sizes="any" /> 
 		<link rel="apple-touch-icon" href="favicon.ico" sizes="any" />
 <!--[if lte IE 9]><script src="select/selectivizr.js"></script><![endif]-->
@@ -405,6 +404,7 @@
 			<br />
 			weekly music updated
 			<br />
+			partly optimized for w3 standard
 			<br />
 			<br />
 		</p>
