--- a/Log.html
+++ b/Log.html
@@ -9,17 +9,12 @@
 			Website Log
 		</title>
 		<style>
-			body ::selection {
-				color: #000000;
-				background: orange;
-					}
 			body {
 				color: #FFFFFF;
 				background: #000000;
 				font-family: Georgia, Arial, MS Pmincho, MS Mincho;
 					}
 		</style>
-
 	</head>
 	<body>
 		<a href="index.html">
@@ -407,9 +402,9 @@
 			partly optimized for w3 standard
 			<br />
 			<br />
+			<br />
 		</p>
-
-
+		
 		<br />
 		<br />
 		<br />
@@ -421,6 +416,13 @@
 		<br />
 		<br />
 		<br />
+		<p>
+			<a href="https://jigsaw.w3.org/css-validator/check/referer">
+				<img style="border:0;width:88px;height:31px"
+					src="https://jigsaw.w3.org/css-validator/images/vcss-blue"
+					alt="Valid CSS!" />
+			</a>
+		</p>
 		<p>
 			Copyright &copy; yaozeye@foxmail.com
 		</p>	
