--- a/study/chinese/白头吟.html
+++ b/study/chinese/白头吟.html
@@ -12,9 +12,9 @@
 		</title>
 	</head>
 	<body>
-<h1 id="poemstyle">白头吟</h1>
-<h2 id="poemstyle">          卓文君</h2>
-<p id="poemstyle">皑如山上雪，皎若云间月。闻君有两意，故来相决绝。<br />
+<h1 id="poem">白头吟</h1>
+<h2 id="poem">          卓文君</h2>
+<p id="poem">皑如山上雪，皎若云间月。闻君有两意，故来相决绝。<br />
 今日斗酒会，明旦沟水头。躞蹀御沟上，沟水东西流。<br />
 凄凄复凄凄，嫁娶不须啼。愿得一人心，白首不相离。<br />
 竹竿何袅袅，鱼尾何簁簁！男儿重意气，何用钱刀为！<br /><br />
