--- a/Log.html
+++ b/Log.html
@@ -35,7 +35,7 @@
 
 		<br />
 		<p>
-			Last Updated On 16/12/2017 (DD/MM/YYYY):<br />"essentials"
+			Last Updated On 17/12/2017 (DD/MM/YYYY):<br />"essentials"
 		</p>
 		<br />
 		<br />
@@ -404,7 +404,14 @@
 			<br />
 			<br />
 		</p>
-		
+		<p>
+			12/17
+			<br />
+			study content added
+			<br />
+			<br />
+			<br />
+		</p>
 		<br />
 		<br />
 		<br />
@@ -419,7 +426,7 @@
 		<p>
 			<a href="https://jigsaw.w3.org/css-validator/check/referer">
 				<img style="border:0;width:88px;height:31px"
-					src="https://jigsaw.w3.org/css-validator/images/vcss-blue"
+					src="https://jigsaw.w3.org/css-validator/images/vcss"
 					alt="Valid CSS!" />
 			</a>
 		</p>
