--- a/study/chinese/白头吟.html
+++ b/study/chinese/白头吟.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-hans">
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<link rel="shortcut icon" href="../../favicon.ico" type="image/x-icon" sizes="any" /> 
 		<link rel="stylesheet" href="../../common/init.css" />
 		<link rel="apple-touch-icon" href="../../favicon.ico" sizes="any" />
