--- a/study/chinese/白头吟.html
+++ b/study/chinese/白头吟.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<link rel="shortcut icon" href="../../favicon.ico" type="image/x-icon" sizes="any" /> 
+		<link rel="shortcut icon" href="../../favicon.ico" type="image/x-icon" /> 
 		<link rel="stylesheet" href="../../common/init.css" />
-		<link rel="apple-touch-icon" href="../../favicon.ico" sizes="any" />
+		<link rel="apple-touch-icon" href="../../favicon.ico" />
 		<!--[if lte IE 9]><script src="../../select/selectivizr.js"></script><![endif]-->
 		<title>
 			白头吟 - Yaoze YE
@@ -56,9 +56,9 @@
 　　原诗中的“皑如山上雪，皎若云间月”：这两句是卓文君自喻其人格纯洁如白玉。<br />皑：白色，通常用来形容雪的洁白。<br />皎：皎洁，通常用以形容月光，洁白光明的意思，但也不专指月光，如《诗经·小雅》有“皎如白驹”之句。“闻君有两意”：两意，指两条心。说的是司马相如另有所爱——欲纳茂陵女为妾。<br />“竹竿何嫋嫋，鱼尾何簁簁”：诗人用竹竿尾的摇动和鱼尾的摇动来形容意志、爱情不坚定。钱刀：古时使用的铜钱形状似刀，故叫做钱刀。<br />这里指爱情不是金钱能买到的。
 <br /><br />
 汉朝卓文君和司马相如的恋爱故事是很动人的。<br />据说，司马相如穷困时在临邛富豪卓王孙家作客，在饮宴中偶然见到卓王孙新守寡的女儿文君很美貌，于是弹奏《凤求凰》表达自己的爱慕之情，挑逗文君。<br />文君果为所动，当夜与相如私奔成都。<br />相如是个贫苦文人，生计无着，过了一阵只好同文君回到临邛开个小酒店。<br />就开在卓府对面。卓文君当垆卖酒，卓王孙大为恼怒，不忍爱女抛头露面为人取笑，只好分一部分财产给她。<br />司马相如后来到京城向皇帝献赋，为汉武帝赏识，给他官做。<br />司马相如在京城想娶茂陵女为妾，卓文君听到此消息，写了这首白头吟表示恩情断绝之意。
+<br />
+<br />
 </p>
-<br />
-<br />
 		<p>
 			<a href="https://jigsaw.w3.org/css-validator/check/referer">
 				<img style="border:0;width:88px;height:31px"
