--- a/study/chinese/白头吟.html
+++ b/study/chinese/白头吟.html
@@ -59,6 +59,10 @@
 <br />
 <br />
 </p>
+  <p>
+    <a href="http://validator.w3.org/check?uri=referer"><img
+      src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" height="31" width="88" /></a>
+  </p>
 		<p>
 			<a href="https://jigsaw.w3.org/css-validator/check/referer">
 				<img style="border:0;width:88px;height:31px"
