--- a/Log.html
+++ b/Log.html
@@ -29,22 +29,21 @@
 				Website History
 			</font>
 		</p>
-		<br />
+		<p><br />
 		<iframe width="541.48px" height="541.48px" src="svg/earthasia.svg" scrolling="no"></iframe>
 		<br />
 
 		<br />
+		</p>
 		<p>
 			Last Updated On 17/12/2017 (DD/MM/YYYY):<br />"essentials"
+			<br /><br /><br />
 		</p>
-		<br />
-		<br />
-		<br />
 		<h1>
 			2017
 		</h1>
-		<br />
 		<p> 
+		<br />
 			10/04-10/05 (MM/DD)
 			<br />
 			The first mod of this site.
@@ -409,9 +408,11 @@
 			<br />
 			study content added
 			<br />
+			optimized
 			<br />
 			<br />
 		</p>
+		<p>
 		<br />
 		<br />
 		<br />
@@ -423,6 +424,7 @@
 		<br />
 		<br />
 		<br />
+		</p>
 		<p>
 			<a href="https://jigsaw.w3.org/css-validator/check/referer">
 				<img style="border:0;width:88px;height:31px"
