--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" sizes="any" /> 
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" /> 
 		<link rel="stylesheet" href="common/init.css" />
-		<link rel="apple-touch-icon" href="favicon.ico" sizes="any" />
+		<link rel="apple-touch-icon" href="favicon.ico" />
 		<!--[if lte IE 9]><script src="select/selectivizr.js"></script><![endif]-->
 		<title>
 			ホーム｜葉-YaozeYE
@@ -43,19 +43,15 @@
 		<!--
 			Function Link
 		-->
-		<p>
+		<p style="font-size:2em;color:grey;">
 			<i>
-				<font style="font-size:2em;color:grey;">
 					------Function Module------
-				</font>
 			</i>
 			<br />
 		</p>
-		<p>
+		<p style="font-size:1.5em;color:#326696;">
 			<a href="webgl-clouds.html">
-				<font style="font-size:1.5em;color:#326696;">
 					webgl-clouds(HTML5)
-				</font>
 			</a>
 			<br />
 		</p>
@@ -162,19 +158,19 @@
 		<br />
 		</p>
 		<p>
-		<a href="https://twitter.com/xfy_yyz/" target="_blank" alt="Twitter" title="Twitter">
+		<a href="https://twitter.com/xfy_yyz/" target="_blank" title="Twitter">
 			Twitter
 		</a>
 		<br />
 		</p>
 		<p>
-		<a target="_blank" href="https://wpa.qq.com/msgrd?v=3&uin=972813975&site=qq&menu=yes">
-			<img border="0" src="https://thirdqq.qlogo.cn/g?b=sdk&k=g7P2DrIte4iahLQuia4vbGSA&s=160&t=1498022840" alt="Tencent QQ" title="Tencent QQ" />
+		<a target="_blank" href="https%3A%2F%2Fwpa.qq.com%2Fmsgrd%3Fv%3D3%26uin%3D972813975%26site%3Dqq%26menu%3Dyes">
+			<img border="0" src="https%3A%2F%2Fthirdqq.qlogo.cn%2Fg%3Fb%3Dsdk%26k%3Dg7P2DrIte4iahLQuia4vbGSA%26s%3D160%26t%3D1498022840" alt="Tencent QQ" title="Tencent QQ" />
 		</a>
 		<br />
 		</p>
 		<p>
-		<a target="_blank" href="https://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=9o_XmYyTj5O2kJmOm5efmtiVmZs" style="text-decoration:none;">
+		<a target="_blank" href="https%3A%2F%2Fmail.qq.com%2Fcgi-bin%2Fqm_share%3Ft%3Dqm_mailme%26email%3D9o_XmYyTj5O2kJmOm5efmtiVmZs" style="text-decoration:none;">
 			<button type="button" onclick="alert('yaozeye@foxmail.com')">
 				Email
 			</button>
