--- a/index.html
+++ b/index.html
@@ -19,12 +19,10 @@
 				</b>
 			</i>
 		</h1>
-		<h2>
+		<h2 style="font-size:45px;color:white;">
 			<i>
 				<b>
-					<font style="font-size:45px;color:white;">
 						Christmas is coming!
-					</font>
 				</b>
 			</i>
 			<br />
@@ -55,83 +53,63 @@
 			</a>
 			<br />
 		</p>
-		<p>
+		<p style="font-size:1.5em;color:purple;">
 			<a href="crazy.html">
-				<font style="font-size:1.5em;color:purple;">
 					crazy-tentacles(HTML5)
-				</font>
 			</a>
 			<br />
 		</p>
-		<p>
+		<p style="font-size:1.5em;color:red;">
 			<a href="Demo1.html">
-				<font style="font-size:1.5em;color:red;">
 					page-preloading1(HTML5)
-				</font>
 			</a>
 			<br />
 		</p>
-		<p>
+		<p style="font-size:1.5em;color:blue;">
 		<a href="Demo2.html">
-			<font style="font-size:1.5em;color:blue;">
 				page-preloading2(HTML5)
-			</font>
 		</a>
 		<br />
 		</p>
-		<p>
+		<p style="font-size:1.5em;color:black;">
 		<a href="ball.html">
-			<font style="font-size:1.5em;color:black;">
 				ball-pool(HTML5)
-			</font>
 		</a>
 		<br />
 		</p>
-		<p>
+		<p style="font-size:1.5em;color:white;">
 		<a href="textillate.html">
-			<font style="font-size:1.5em;color:white;">
 				textillate(HTML5)
-			</font>
 		</a>
 		<br />
 		</p>
-		<p>
+		<p style="font-size:1.5em;color:grey;">
 		<a href="shine.html">
-			<font style="font-size:1.5em;color:grey;">
 				shine(HTML5)
-			</font>
 		</a>
 		<br />
 		</p>
-		<p>
+		<p style="font-size:1.5em;color:rgb(0, 153, 255);">
 		<a href="bubble.html">
-			<font style="font-size:1.5em;color:rgb(0, 153, 255);">
 				Bubbles(Javascript)
-			</font>
 		</a>
 		<br />
 		</p>
-		<p>
+		<p style="font-size:1.5em;color:rgb(255, 60, 155);">
 		<a href="loading.html">
-			<font style="font-size:1.5em;color:rgb(255, 60, 155);">
 				loading(HTML5)
-			</font>
 		</a>
 		<br />
 		</p>
-		<p>
+		<p style="font-size:1.5em;color:#FFB6C1;">
 		<a href="snake.html">
-			<font style="font-size:1.5em;color:#FFB6C1;">
 				snake(HTML5)
-			</font>
 		</a>
 		<br />
 		</p>
-		<p>
+		<p style="font-size:1em;color:green;">
 		<a href="HTML_color.html">
-			<font style="font-size:1em;color:green;">
 				HTML color
-			</font>
 		</a>
 		<br />
 		<br />
@@ -143,11 +121,9 @@
 		<!--
 			Personal Info Start
 		-->
-		<p>
+		<p style="font-size:2em;color:grey;">
 			<i>
-				<font style="font-size:2em;color:grey;">
 					------Contact------
-				</font>
 			</i>
 			<br />
 		</p>
@@ -182,11 +158,9 @@
 		<!--
 			Personal Info Over
 		-->
-		<p>
+		<p style="font-size:1em;color:grey;">
 		<a href="Log.html">
-			<font style="font-size:1em;color:grey;">
 				Log
-			</font>
 		</a>
 		<br />
 		<br />
