--- a/Log.html
+++ b/Log.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" sizes="any" /> 
-		<link rel="apple-touch-icon" href="favicon.ico" sizes="any" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" /> 
+		<link rel="apple-touch-icon" href="favicon.ico" />
 <!--[if lte IE 9]><script src="select/selectivizr.js"></script><![endif]-->
 		<title>
 			Website Log
@@ -17,17 +17,15 @@
 		</style>
 	</head>
 	<body>
-		<a href="index.html">
-			<font style="font-size:30px;color:white;text-shadow: 5px 4px 6px #0000FF;">
+		<p style="font-size:30px;color:white;text-shadow: 5px 4px 6px #0000FF;">
+			<a href="index.html">
 				<b>
 					HOMEPAGE
 				</b>
-			</font>
-		</a>
-		<p>
-			<font style="font-size:40px;color:white;text-shadow: 1px 15px 45px #FFFFFF;">
+			</a>
+		</p>
+		<p style="font-size:40px;color:white;text-shadow: 1px 15px 45px #FFFFFF;">
 				Website History
-			</font>
 		</p>
 		<p><br />
 		<iframe width="541.48px" height="541.48px" src="svg/earthasia.svg" scrolling="no"></iframe>
