--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 		</p>
 		<p>
 		<a target="_blank" href="https%3A%2F%2Fwpa.qq.com%2Fmsgrd%3Fv%3D3%26uin%3D972813975%26site%3Dqq%26menu%3Dyes">
-			<img border="0" src="https%3A%2F%2Fthirdqq.qlogo.cn%2Fg%3Fb%3Dsdk%26k%3Dg7P2DrIte4iahLQuia4vbGSA%26s%3D160%26t%3D1498022840" alt="Tencent QQ" title="Tencent QQ" />
+			<img src="https%3A%2F%2Fthirdqq.qlogo.cn%2Fg%3Fb%3Dsdk%26k%3Dg7P2DrIte4iahLQuia4vbGSA%26s%3D160%26t%3D1498022840" alt="Tencent QQ" title="Tencent QQ" />
 		</a>
 		<br />
 		</p>
@@ -165,7 +165,7 @@
 		<br />
 		<br />
 		</p>
-		<center><div></div></center>
+		<div style="text-align:center"></div>
 		<p>
 			<a href="https://jigsaw.w3.org/css-validator/check/referer">
 				<img style="border:0;width:88px;height:31px"
