--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="common/init.css" />
 		<link rel="apple-touch-icon" href="favicon.ico" />
 		<!--[if lte IE 9]><script src="select/selectivizr.js"></script><![endif]-->
+		<script type="text/javascript" src="js/targetblank.js"></script>
 		<title>
 			ホーム｜葉-YaozeYE
 		</title>
@@ -128,25 +129,25 @@
 			<br />
 		</p>
 		<p>
-		<a target="_blank" href="https://github.com/yaozeye">
+		<a rel="external" href="https://github.com/yaozeye">
 			GitHub
 		</a>
 		<br />
 		</p>
 		<p>
-		<a href="https://twitter.com/xfy_yyz/" target="_blank" title="Twitter">
+		<a href="https://twitter.com/xfy_yyz/" rel="external" title="Twitter">
 			Twitter
 		</a>
 		<br />
 		</p>
 		<p>
-		<a target="_blank" href="https%3A%2F%2Fwpa.qq.com%2Fmsgrd%3Fv%3D3%26uin%3D972813975%26site%3Dqq%26menu%3Dyes">
+		<a rel="external" href="https%3A%2F%2Fwpa.qq.com%2Fmsgrd%3Fv%3D3%26uin%3D972813975%26site%3Dqq%26menu%3Dyes">
 			<img src="https%3A%2F%2Fthirdqq.qlogo.cn%2Fg%3Fb%3Dsdk%26k%3Dg7P2DrIte4iahLQuia4vbGSA%26s%3D160%26t%3D1498022840" alt="Tencent QQ" title="Tencent QQ" />
 		</a>
 		<br />
 		</p>
 		<p>
-		<a target="_blank" href="https%3A%2F%2Fmail.qq.com%2Fcgi-bin%2Fqm_share%3Ft%3Dqm_mailme%26email%3D9o_XmYyTj5O2kJmOm5efmtiVmZs" style="text-decoration:none;">
+		<a rel="external" href="https%3A%2F%2Fmail.qq.com%2Fcgi-bin%2Fqm_share%3Ft%3Dqm_mailme%26email%3D9o_XmYyTj5O2kJmOm5efmtiVmZs" style="text-decoration:none;">
 			<button type="button" onclick="alert('yaozeye@foxmail.com')">
 				Email
 			</button>
