--- a/index.html
+++ b/index.html
@@ -49,68 +49,68 @@
 			</i>
 			<br />
 		</p>
-		<p style="font-size:1.5em;color:#326696;">
-			<a href="webgl-clouds.html">
+		<p>
+			<a href="webgl-clouds.html" style="font-size:1.5em;color:#326696;">
 					webgl-clouds(HTML5)
 			</a>
 			<br />
 		</p>
-		<p style="font-size:1.5em;color:purple;">
-			<a href="crazy.html">
+		<p>
+			<a href="crazy.html" style="font-size:1.5em;color:purple;">
 					crazy-tentacles(HTML5)
 			</a>
 			<br />
 		</p>
-		<p style="font-size:1.5em;color:red;">
-			<a href="Demo1.html">
+		<p>
+			<a href="Demo1.html" style="font-size:1.5em;color:red;">
 					page-preloading1(HTML5)
 			</a>
 			<br />
 		</p>
-		<p style="font-size:1.5em;color:blue;">
-		<a href="Demo2.html">
+		<p>
+		<a href="Demo2.html" style="font-size:1.5em;color:blue;">
 				page-preloading2(HTML5)
 		</a>
 		<br />
 		</p>
-		<p style="font-size:1.5em;color:black;">
-		<a href="ball.html">
+		<p>
+		<a href="ball.html" style="font-size:1.5em;color:black;">
 				ball-pool(HTML5)
 		</a>
 		<br />
 		</p>
-		<p style="font-size:1.5em;color:white;">
-		<a href="textillate.html">
+		<p>
+		<a href="textillate.html" style="font-size:1.5em;color:white;">
 				textillate(HTML5)
 		</a>
 		<br />
 		</p>
-		<p style="font-size:1.5em;color:grey;">
-		<a href="shine.html">
+		<p>
+		<a href="shine.html" style="font-size:1.5em;color:grey;">
 				shine(HTML5)
 		</a>
 		<br />
 		</p>
-		<p style="font-size:1.5em;color:rgb(0, 153, 255);">
-		<a href="bubble.html">
+		<p>
+		<a href="bubble.html" style="font-size:1.5em;color:rgb(0, 153, 255);">
 				Bubbles(Javascript)
 		</a>
 		<br />
 		</p>
-		<p style="font-size:1.5em;color:rgb(255, 60, 155);">
-		<a href="loading.html">
+		<p>
+		<a href="loading.html" style="font-size:1.5em;color:rgb(255, 60, 155);">
 				loading(HTML5)
 		</a>
 		<br />
 		</p>
-		<p style="font-size:1.5em;color:#FFB6C1;">
-		<a href="snake.html">
+		<p>
+		<a href="snake.html" style="font-size:1.5em;color:#FFB6C1;">
 				snake(HTML5)
 		</a>
 		<br />
 		</p>
-		<p style="font-size:1em;color:green;">
-		<a href="HTML_color.html">
+		<p>
+		<a href="HTML_color.html" style="font-size:1em;color:green;">
 				HTML color
 		</a>
 		<br />
@@ -160,8 +160,8 @@
 		<!--
 			Personal Info Over
 		-->
-		<p style="font-size:1em;color:grey;">
-		<a href="Log.html">
+		<p>
+		<a href="Log.html" style="font-size:1em;color:grey;">
 				Log
 		</a>
 		<br />
@@ -169,8 +169,8 @@
 		</p>
 		<div style="text-align:center"></div>
 		<p>
-			<a href="http://validator.w3.org/check?uri=referer"><img
-				src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" height="31" width="88" /></a>
+			<a href="https://validator.w3.org/check?uri=referer"><img
+				src="https://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" height="31" width="88" /></a>
 		</p>		
 		<p>
 			<a href="https://jigsaw.w3.org/css-validator/check/referer">
