--- a/index.html
+++ b/index.html
@@ -142,13 +142,13 @@
 		<br />
 		</p>
 		<p>
-		<a rel="external" href="https%3A%2F%2Fwpa.qq.com%2Fmsgrd%3Fv%3D3%26uin%3D972813975%26site%3Dqq%26menu%3Dyes">
-			<img src="https%3A%2F%2Fthirdqq.qlogo.cn%2Fg%3Fb%3Dsdk%26k%3Dg7P2DrIte4iahLQuia4vbGSA%26s%3D160%26t%3D1498022840" alt="Tencent QQ" title="Tencent QQ" />
+		<a rel="external" href="https://wpa.qq.com%2Fmsgrd%3Fv%3D3%26uin%3D972813975%26site%3Dqq%26menu%3Dyes">
+			<img src="https://thirdqq.qlogo.cn%2Fg%3Fb%3Dsdk%26k%3Dg7P2DrIte4iahLQuia4vbGSA%26s%3D160%26t%3D1498022840" alt="Tencent QQ" title="Tencent QQ" />
 		</a>
 		<br />
 		</p>
 		<p>
-		<a rel="external" href="https%3A%2F%2Fmail.qq.com%2Fcgi-bin%2Fqm_share%3Ft%3Dqm_mailme%26email%3D9o_XmYyTj5O2kJmOm5efmtiVmZs" style="text-decoration:none;">
+		<a rel="external" href="https://mail.qq.com%2Fcgi-bin%2Fqm_share%3Ft%3Dqm_mailme%26email%3D9o_XmYyTj5O2kJmOm5efmtiVmZs" style="text-decoration:none;">
 			<button type="button" onclick="alert('yaozeye@foxmail.com')">
 				Email
 			</button>
