--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 		<br />
 		<br />
 		</p>
-		<div style="text-align:center"></div>
+		<div id="center"></div>
 		<p>
 			<a href="https://validator.w3.org/check?uri=referer"><img
 				src="https://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" height="31" width="88" /></a>
