--- a/Log.html
+++ b/Log.html
@@ -4,6 +4,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" /> 
 		<link rel="apple-touch-icon" href="favicon.ico" />
+		<script type="text/javascript" src="js/targetblank.js"></script>
 		<!--[if lte IE 9]><script src="select/selectivizr.js"></script><![endif]-->
 		<title>
 			Website Log
@@ -424,7 +425,7 @@
 		<br />
 		</p>
 		<p>
-			<a href="https://jigsaw.w3.org/css-validator/check/referer">
+			<a rel="external" href="https://jigsaw.w3.org/css-validator/check/referer">
 				<img style="border:0;width:88px;height:31px"
 					src="https://jigsaw.w3.org/css-validator/images/vcss"
 					alt="Valid CSS!" />
