--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<p>
 			<a href="weeklymusic.html" style="text-decoration:none;">
 				<button type="button" value="WeeklyMusic Dec 17 - Dec 23">	
-					<h3 id="title-caps-red">
+					<h3 id="h-caps-red">
 							Weekly Music!<br />Dec 17-Dec 23
 					</h3>
 				</button>
@@ -142,13 +142,13 @@
 		<br />
 		</p>
 		<p>
-		<a rel="external" href="https://wpa.qq.com%2Fmsgrd%3Fv%3D3%26uin%3D972813975%26site%3Dqq%26menu%3Dyes">
-			<img src="https://thirdqq.qlogo.cn%2Fg%3Fb%3Dsdk%26k%3Dg7P2DrIte4iahLQuia4vbGSA%26s%3D160%26t%3D1498022840" alt="Tencent QQ" title="Tencent QQ" />
+		<a rel="external">
+			<img src="https://y.gtimg.cn/music/icon/v1/pc/nsvip8.png" alt="Tencent" title="Tencent" />
 		</a>
 		<br />
 		</p>
 		<p>
-		<a rel="external" href="https://mail.qq.com%2Fcgi-bin%2Fqm_share%3Ft%3Dqm_mailme%26email%3D9o_XmYyTj5O2kJmOm5efmtiVmZs" style="text-decoration:none;">
+		<a rel="external" style="text-decoration:none;">
 			<button type="button" onclick="alert('yaozeye@foxmail.com')">
 				Email
 			</button>
@@ -167,13 +167,13 @@
 		<br />
 		<br />
 		</p>
-		<div id="center"></div>
+		<div id="div-center"></div>
 		<p>
-			<a href="https://validator.w3.org/check?uri=referer"><img
+			<a rel="external" href="https://validator.w3.org/check?uri=referer"><img
 				src="https://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" height="31" width="88" /></a>
 		</p>		
 		<p>
-			<a href="https://jigsaw.w3.org/css-validator/check/referer">
+			<a rel="external" href="https://jigsaw.w3.org/css-validator/check/referer">
 				<img style="border:0;width:88px;height:31px"
 					src="https://jigsaw.w3.org/css-validator/images/vcss-blue"
 					alt="Valid CSS!" />
