--- a/study/chinese/白头吟.html
+++ b/study/chinese/白头吟.html
@@ -7,11 +7,12 @@
 		<link rel="stylesheet" href="../../common/init.css" />
 		<link rel="apple-touch-icon" href="../../favicon.ico" />
 		<!--[if lte IE 9]><script src="../../select/selectivizr.js"></script><![endif]-->
+		<script type="text/javascript" src="../../js/targetblank.js"></script>
 		<title>
 			白头吟 - Yaoze YE
 		</title>
 	</head>
-	<body id="poem">
+	<body id="poem-stress">
 <h1>白头吟</h1>
 <h2>          卓文君</h2>
 <p>皑如山上雪，皎若云间月。闻君有两意，故来相决绝。<br />
@@ -60,11 +61,11 @@
 <br />
 </p>
   <p>
-    <a href="http://validator.w3.org/check?uri=referer"><img
+    <a rel="external" href="http://validator.w3.org/check?uri=referer"><img
       src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" height="31" width="88" /></a>
   </p>
 		<p>
-			<a href="https://jigsaw.w3.org/css-validator/check/referer">
+			<a rel="external" href="https://jigsaw.w3.org/css-validator/check/referer">
 				<img style="border:0;width:88px;height:31px"
 					src="https://jigsaw.w3.org/css-validator/images/vcss-blue"
 					alt="Valid CSS!" />
