--- a/Log.html
+++ b/Log.html
@@ -18,8 +18,8 @@
 		</style>
 	</head>
 	<body>
-		<p style="font-size:30px;color:white;text-shadow: 5px 4px 6px #0000FF;">
-			<a href="index.html">
+		<p>
+			<a href="index.html" style="text-decoration:none;font-size:30px;color:#FFFF00;text-shadow: 5px 4px 6px #0000FF;">
 				<b>
 					HOMEPAGE
 				</b>
@@ -35,7 +35,7 @@
 		<br />
 		</p>
 		<p>
-			Last Updated On 17/12/2017 (DD/MM/YYYY):<br />"essentials"
+			Last Updated On 21/12/2017 (DD/MM/YYYY):<br />"essentials"
 			<br /><br /><br />
 		</p>
 		<h1>
@@ -63,6 +63,7 @@
 				<br />Email  
 				<br />
 				"
+				<br />
 				<br />
 				<br />
 		</p>
@@ -201,7 +202,6 @@
 			<br />
 			<br />
 			<br />
-			<br />
 		</p>
 		<p>
 			11/11
@@ -230,22 +230,6 @@
 			<br />
 			previous songs ( iframe only ) have been proved to be inaudible for unknown reasons
 			<br />
-			'
-			<br />
-			aLIEz - mizuki/SawanoHiroyuki[nZk]
-			<br />
-			aLIEz [mZk ver.] - mizuki/SawanoHiroyuki[nZk]
-			<br />
-			βios - 小林未郁
-			<br />
-			“笼のなか” - 増田俊郎
-			<br />
-			Nature's Path - Dan Gibson
-			<br />
-			ASMR - Morpheus
-			<br />
-			'
-			<br />
 			iframe width adjusted
 			<br />
 			layout adjusted
@@ -253,6 +237,7 @@
 			html file grammar revised
 			<br />
 			"
+			<br />
 			<br />
 			<br />
 		</p>
@@ -269,11 +254,7 @@
 		<p>
 			11/14
 			<br />
-			1 more song added "
-			<br />
-			この花火が终わるまでに - さちっぷ
-			<br />
-			"
+			1 more song added
 			<br />
 			<br />
 			<br />
@@ -289,15 +270,13 @@
 		<p>
 			11/16
 			<br />
-			Log.html xhtml strict removed (to html5)
+			Log.html xhtml strict standard referer removed
 			<br />
 			<br />
 			<br />
 		</p>
 		<p>
 			11/18
-			<br />
-			biology 17.11(YY.MM) mid-term exam answer(*.txt) available now
 			<br />
 			Log.html svg modified
 			<br />
@@ -317,11 +296,11 @@
 			<br />
 			css available now
 			<br />
-			some of data unit changed from 'px' to 'em'
+			index data unit changed from 'px' to 'em'
 			<br />
-			Today's update may reduce 0.01ms-500ms of your loading time, enjoy your browsing now!
+			Today's update may reduce 0.01ms-500ms loading time.
 			<br />
-			music music music, the first step of 'Weekly Music'
+			music! the first step of 'Weekly Music'
 			<br />
 			<br />
 			<br />
@@ -410,13 +389,30 @@
 			optimized
 			<br />
 			<br />
+			<br />
 		</p>
 		<p>
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
+			12/20
+			<br />
+			optimized
+			<br />
+			<br />
+			<br />
+		</p>
+		<p>
+			12/21
+			<br />
+			index div modified
+			<br />
+			Email button modified
+			<br />
+			css file divided
+			<br />
+			weekly music series grammar standard improved in future
+			<br />
+			<br />
+			<br />
+		</p>
 		<br />
 		<br />
 		<br />
@@ -432,7 +428,7 @@
 			</a>
 		</p>
 		<p>
-			Copyright &copy; yaozeye@foxmail.com
+			Copyright &copy; 2017 Yaoze Ye
 		</p>	
 	</body>
 </html>
