--- a/music/17-dec24-dec30.html
+++ b/music/17-dec24-dec30.html
@@ -4,71 +4,59 @@
 		<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
+		<link rel="apple-touch-icon" href="../favicon.ico" />
 		<link rel="stylesheet" href="../common/init.css" />
 		<!--[if lte IE 9]><script src="../select/selectivizr.js"></script><![endif]-->
 		<script type="text/javascript" src="../js/targetblank.js"></script>
-		<title>17Dec.17-Dec.23</title>
+		<title>17Dec.24-Dec.30</title>
 	</head>
 	<body>
-		<a id="home-black" href="../index.html">
+		<p>
+			<a id="home-black" href="../index.html">
 					HOMEPAGE
-		</a>
-		<br />
+			</a>
+		</p>
 		<!--Notice-->
+		<p>
 		<br />
 		<br />
 		<a href="../music.html" rel="external">For More? Click here!</a>
 		<br />
 		<br />
 		<br />
-		<!--Notice Over-->
-		<!--
-			iframe start
-		-->
 		<br />
+		</p>
+		<!--Notice Over-->
 		<p>
 			<b>
 				iframe 
 			</b>
 		</p>
-		<br />
+		<p></p>
 		<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="0" height="0">
 			Your browser does not support iframe, please update your browser to the latest version.
 		</iframe>
-		<br />
+		<p></p>
 		<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="80%" height="86" src="https://music.163.com/outchain/player?type=2&id=399367218&auto=0&height=66">
-			君の知らない物語 - Supercell
+			
 		</iframe>
-		<br />
+		<p></p>
 		<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="75%" height="86" src="https://music.163.com/outchain/player?type=2&id=26096528&auto=0&height=66">
-			「僕らのあしあと」ピアノVer. - Supercell
+			
 		</iframe>
-		<br />
+		<p></p>
 		<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="70%" height="86" src="https://music.163.com/outchain/player?type=2&id=501886&auto=0&height=66">
-			星が瞬くこんな夜に ~ゲームVer.~ - Supercell
+			
 		</iframe>
-		<br />
-		
-		<br />
-		<!--
-			iframe over
-		-->
-		<br />
-		<a target="_blank" href="https://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=9o_XmYyTj5O2kJmOm5efmtiVmZs" style="text-decoration:none;">
-			Any questions please click here to ask for help. (Email)
-		</a>
-		<br />
 		<p>
-			Flash (not recommend for all devices , not support iOS)<br />FLASH has been removed for the security reason.
+		<br />
+		<br />
+		<br />
+		<br />
+		<br />
 		</p>
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
 		<p id="copyright-white">
-				Copyright &copy; yaozeye@foxmail.com
+				Copyright &copy; 2017 Yaoze Ye
 		</p>
 	</body>
 </html>
