--- a/weeklymusic.html
+++ b/weeklymusic.html
@@ -2,14 +2,14 @@
 <html>
 	<head>
 		<meta http-equiv="refresh" content="0;url=music/17-dec17-dec23.html" />
-		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" sizes="any" /> 
-		<link rel="apple-touch-icon" href="favicon.ico" sizes="any" />
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" /> 
+		<link rel="apple-touch-icon" href="favicon.ico" />
 		<link rel="stylesheet" href="common/init.css" />
 		<!--[if lte IE 9]><script src="select/selectivizr.js"></script><![endif]-->
 	</head>
 	<body>
-		<p>
+		<p><b>
 			Please wait...
-		</p>
+		</b></p>
 	</body>
 </html>
