--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" /> 
 		<link rel="stylesheet" href="common/init.css" />
+		<link rel="stylesheet" href="common/divcolor.css" />
 		<link rel="apple-touch-icon" href="favicon.ico" />
 		<!--[if lte IE 9]><script src="select/selectivizr.js"></script><![endif]-->
 		<script type="text/javascript" src="js/targetblank.js"></script>
@@ -149,7 +150,7 @@
 		</p>
 		<p>
 		<a rel="external" style="text-decoration:none;">
-			<button type="button" onclick="alert('yaozeye@foxmail.com')">
+			<button type="button" onclick="alert('yaozeye@foxmail.com	;	yaozeye@outlook.com	;	yaozeye@yahoo.co.jp	;')">
 				Email
 			</button>
 		</a>
@@ -180,7 +181,7 @@
 			</a>
 		</p>
 		<p id="copyright-white">
-				Copyright &copy; yaozeye@foxmail.com
+				Copyright &copy; 2018 Yaoze Ye
 		</p>
 	</body>
 </html>
