--- a/music.html
+++ b/music.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-		<meta http-equiv="Cache-Control" content="no-siteapp" />
-		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" sizes="any" /> 
+		<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" /> 
+		<link rel="apple-touch-icon" href="favicon.ico" />
 		<link rel="stylesheet" href="common/init.css" />
 		<!--[if lte IE 9]><script src="select/selectivizr.js"></script><![endif]-->
+		<script type="text/javascript" src="js/targetblank.js"></script>
 		<title>
 			Music
 		</title>
@@ -15,25 +16,19 @@
 		<h1>
 			MUSIC
 		</h1>
-		<br />
-		<br />
+		<p></p>
 		<p>
 			Latest
 		</p>
-		<a href="music/17-dec17-dec23.html">2017 Dec.17-Dec.23</a>
-		<br />
-		
+		<p><a href="music/17-dec24-dec30.html">2017 Dec.24-Dec.30</a></p>
 		<p>
 			Previous
 		</p>
-		<a href="music/17-dec10-dec16.html">2017 Dec.10-Dec.16</a>
-		<br />
-		<a href="music/17-dec03-dec09.html">2017 Dec.03-Dec.09</a>
-		<br />
-		<a href="music/17-nov26-dec02.html">2017 Nov.26-Dec.02</a>
-		<br />
-		<a href="music/17-nov19-nov25.html">2017 Nov.19-Nov.25</a>
-		<br />
-		<a href="music/music-2nd.html">-Nov.18 2017</a>
+		<p><a href="music/17-dec17-dec23.html">2017 Dec.17-Dec.23</a></p>
+		<p><a href="music/17-dec10-dec16.html">2017 Dec.10-Dec.16</a></p>
+		<p><a href="music/17-dec03-dec09.html">2017 Dec.03-Dec.09</a></p>
+		<p><a href="music/17-nov26-dec02.html">2017 Nov.26-Dec.02</a></p>
+		<p><a href="music/17-nov19-nov25.html">2017 Nov.19-Nov.25</a></p>
+		<p><a href="music/music-2nd.html">-Nov.18 2017</a></p>
 	<body>
 </html>
