--- a/Log.html
+++ b/Log.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -9,12 +10,15 @@
 		<title>
 			Website Log
 		</title>
-		<style>
+		<style type="text/css">
 			body {
 				color: #FFFFFF;
 				background: #000000;
-				font-family: Georgia, Arial, MS Pmincho, MS Mincho;
+				font-family: Georgia, Arial, MS Pmincho, SimSun, MS Mincho;
 					}
+			iframe {
+			overflow:auto;
+			}
 		</style>
 	</head>
 	<body>
@@ -28,14 +32,13 @@
 		<p style="font-size:40px;color:white;text-shadow: 1px 15px 45px #FFFFFF;">
 				Website History
 		</p>
-		<p><br />
-		<iframe width="541.48px" height="541.48px" src="svg/earthasia.svg" scrolling="no"></iframe>
+		<br />
+		<iframe width="542px" height="542px" src="svg/earthasia.svg" ></iframe>
 		<br />
 
 		<br />
-		</p>
 		<p>
-			Last Updated On 21/12/2017 (DD/MM/YYYY):<br />"essentials"
+			Last Updated On 23/12/2017 (DD/MM/YYYY):<br />"essentials"
 			<br /><br /><br />
 		</p>
 		<h1>
@@ -148,8 +151,7 @@
 			<br />
 			<br />
 		</p>
-		<p>
-			11/06
+		<p>11/06
 			<br />
 			Halloween Theme removed
 			<br />
@@ -158,8 +160,7 @@
 			<br />
 			<br />
 		</p>
-		<p>
-			11/07
+		<p>11/07
 			<br />
 			index body ::selection improved
 			<br />
@@ -170,8 +171,7 @@
 			<br />
 			<br />
 		</p>
-		<p>
-			11/08
+		<p>11/08
 			<br />
 			site-wide HTTPS supported
 			<br />
@@ -195,16 +195,14 @@
 			<br />
 			<br />
 			<br />
-		<p>
-			11/10
+		<p>11/10
 			<br />
 			That's incredible that I have updated the 1111 theme...
 			<br />
 			<br />
 			<br />
 		</p>
-		<p>
-			11/11
+		<p>11/11
 			<br />
 			That's incredible that I have improved the 1111 theme...
 			<br />
@@ -219,8 +217,7 @@
 			<br />
 			<br />
 		</p>
-		<p>
-			11/12
+		<p>11/12
 			<br />
 			music page "text fixed
 			<br />
@@ -241,8 +238,7 @@
 			<br />
 			<br />
 		</p>
-		<p>
-			11/13
+		<p>11/13
 			<br />
 			music.html notice updated
 			<br />
@@ -251,24 +247,21 @@
 			<br />
 			<br />
 		</p>
-		<p>
-			11/14
+		<p>11/14
 			<br />
 			1 more song added
 			<br />
 			<br />
 			<br />
 		</p>
-		<p>
-			11/15
+		<p>11/15
 			<br />
 			index code optimized
 			<br />
 			<br />
 			<br />
 		</p>
-		<p>
-			11/16
+		<p>11/16
 			<br />
 			Log.html xhtml strict standard referer removed
 			<br />
@@ -413,6 +406,17 @@
 			<br />
 			<br />
 		</p>
+		<p>
+			12/23
+			<br />
+			weekly music updated
+			<br />
+			partly optimized for w3 standard
+			<br />
+			<br />
+			<br />
+		</p>
+		<p>
 		<br />
 		<br />
 		<br />
