--- a/Log.html
+++ b/Log.html
@@ -38,7 +38,7 @@
 
 		<br />
 		<p>
-			Last Updated On 23/12/2017 (DD/MM/YYYY):<br />"essentials"
+			Last Updated On 24/12/2017 (DD/MM/YYYY):<br />"essentials"
 			<br /><br /><br />
 		</p>
 		<h1>
@@ -416,6 +416,15 @@
 			<br />
 			<br />
 		</p>
+		<p>
+			12/24
+			<br />
+			X'MAS THEME ADDED
+			<br />
+			<br />
+			<br />
+		</p>
+
 		<p>
 		<br />
 		<br />
