--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<h2 style="font-size:45px;color:white;">
 			<i>
 				<b>
-						Christmas is coming!
+						MERRY X'MAS!
 						<br />
 						頑張って！
 				</b>
